# goalify

agent_rag/: pyproject.toml
agent_rag/src/: services.py
agent_rag/src/functions/: book1.py
agent_rag/src/workflows/: pdf.py
pdf_ocr/: pyproject.toml
weav/: ah.txt  docker-compose.yml  loader.py  split.py  test.py  text_chunks.csv
